# Study-Contracts-App

./: .gitignore  CMakeLists.txt  fake_repo.h  main.cpp
GUI/: ContractsGUI.cpp  ContractsGUI.h
domain/: Discipline.cpp  Discipline.h
repository/: Repo.cpp  Repo.h  VectorDinamicTemplate.h  file_repo.cpp  file_repo.h
service/: Service.cpp  Service.h
undo/: undo.h
user_interface/: Console.cpp  Console.h
validate/: Validate.cpp  Validate.h
